# GPT-2-from-scratch

./: .gitignore  2_working_with_data.ipynb  3_attention_mehcanism.ipynb  4_train_gpt_model.ipynb  6_classification_fine_tuning.ipynb  7_instruction_fine_tuning.ipynb  7_instruction_fine_tuning_pt2.ipynb  README.md  ch06.ipynb  ch07.ipynb  gpt_finetuning_classifier.py  gpt_training.py  inference_fine_tuning_classifier.py  instruction-data-with-response.json  pyproject.toml  training-text.txt
