[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "asttokens>=3.0.0",
    "camelot-py[base]>=1.0.9",
    "chainlit>=2.10.0",
    "comm>=0.2.3",
    "dagshub>=0.6.3",
    "datasets>=4.0.0",
    "docling>=2.48.0",
    "docling-core>=2.45.0",
    "docling-parse>=4.2.3",
    "dvc[s3]>=3.62.0",
    "faiss-cpu>=1.12.0",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "gliner>=0.2.21",
    "huggingface-hub[hf-xet]>=0.34.4",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "ir-datasets>=0.5.11",
    "ir-measures>=0.4.1",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.31",
    "langextract>=1.0.8",
    "langgraph>=0.6.6",
    "lxml>=5.4.0",
    "modelscope>=1.29.1",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "onnxruntime>=1.22.1",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pdftext>=0.6.3",
    "pip>=25.2",
    "pymupdf>=1.26.4",
    "pypdfium2>=4.30.0",
    "rank-bm25>=0.2.2",
    "rapidocr>=3.3.1",
    "rapidocr-onnxruntime>=1.4.4",
    "ruff>=0.12.10",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
    "surya-ocr>=0.15.4",
    "tensorflow>=2.15.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.66",
    "transformers>=4.53.3",
    "unstructured[pdf]>=0.18.14",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
